manifests/golden2/peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: enable-mtls-strict
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
