manifests/golden2/tcp-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tcp-client
  namespace: myapp
  labels:
    app: tcp-client
    sidecar.istio.io/inject: "true"
    spiffe.io/cluster: istio-g.omegaworld.net
  annotations:
    omegahome.net/managed-csi: "true"
    proxy.istio.io/config: |
          proxyMetadata:
            ISTIO_META_DNS_CAPTURE: "true"
spec:
  serviceAccountName: tcp-client
  containers:
    - name: tcp-client
      imagePullPolicy: Always
      image: shanmugara/tcp-client:0.0.1
      command: ["sleep", "infinity"]
      resources:
        requests:
          cpu: "50m"
          memory: "32Mi"
        limits:
          cpu: "100m"
          memory: "64Mi"
  restartPolicy: Never
