manifests/golden2/omegaweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: omegaweb
  name: omegaweb
  namespace: myapp
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: omegaweb
  type: ClusterIP
status:
  loadBalancer: {}
