manifests/golden2/omegaweb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: omegaweb
  name: omegaweb
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omegaweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        omegahome.net/managed-csi: "true"
      labels:
        app: omegaweb
        spiffe.io/cluster: "istio-g.omegaworld.net"
        sidecar.istio.io/inject: "true"
        spiffe.io/spire-managed-identity: "true"
    spec:
      serviceAccountName: omegaweb
      containers:
      - image: shanmugara/omegaweb-gen:v2
        name: omegaweb-gen
        resources: {}
        ports:
        - containerPort: 5000
          protocol: TCP
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: omegaweb
  name: omegaweb
  namespace: myapp
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: omegaweb
  type: ClusterIP
status:
  loadBalancer: {}
