manifests/golden2/external-egress-omegaapp2-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: external-egress-omegaapp2
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http-port
      protocol: HTTP
    hosts:
    - 'omegaapp-2.omegaworld.net'
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: TLS
    hosts:
    - 'omegaapp-2.omegaworld.net' 
    tls:
      mode: ISTIO_MUTUAL  # PASSTHROUGH
