manifests/golden2/omegaweb-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: omegaweb-istio-g-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "omegaweb-istio-g.omegaworld.net"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: omegaweb-tls
      mode: SIMPLE
