manifests/golden2/external-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: egressgateway
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: httpbin-eg-http
    trafficPolicy:
      portLevelSettings:
      - port: 
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: www.httpbin.org
  - name: httpbin-eg
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL 
        sni: www.httpbin.org
  - name: cnn-eg
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: www.cnn.com
  - name: google-eg
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: www.google.com
  - name: mysql-eg
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: mysql-a.omegaworld.net 
  - name: mysql2-eg
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: omega-mysql-1.omegaworld.net
  - name: omegaapp2-eg
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: omegaapp-2.omegaworld.net
