manifests/golden2/external-mysql2-svc.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-mysql2
  namespace: istio-system
spec:
  hosts:
  - omega-mysql-1.omegaworld.net
  endpoints:
  - address: 192.168.0.115
  addresses:
  - 192.168.0.115/32
  ports:
  - number: 3306
    name: tcp-port-mesh
    protocol: TCP
  - number: 443
    name: tls-port-egress
    protocol: TLS
  resolution: STATIC
  location: MESH_EXTERNAL
