manifests/golden2/external-vs-cnn.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cnn-vs
  namespace: istio-egress
spec:
  hosts:
  - www.cnn.com
  gateways:
  - external-egress-cnn
  - mesh
  tcp:
  - match:
    - gateways:
      - external-egress-cnn
      port: 443
    route:
    - destination:
        host: squid-a-01.omegaworld.net
        port:
          number: 3128
        subset: cnn-proxy
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:  
    - destination:
        host: istio-egressgateway.istio-egress.svc.cluster.local
        port:
          number: 80
        subset: cnn-eg
      weight: 100
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.cnn.com
    route:
    - destination:
        host: istio-egressgateway.istio-egress.svc.cluster.local
        port:
          number: 443
        subset: cnn-eg
      weight: 100
