manifests/golden2/external-vs-httpbin.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: istio-system
spec:
  hosts:
  - www.httpbin.org
  gateways:
  - external-egress-httpbin
  - mesh
  tcp:
  - match:
    - gateways:
      - external-egress-httpbin
      port: 443
    route:
    - destination:
        host: squid-a-01.omegaworld.net
        port:
          number: 3128
        subset: httpbin-proxy
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:  
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
        subset: httpbin-eg
      weight: 100
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.httpbin.org
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
        subset: httpbin-eg
      weight: 100
