manifests/golden2/external-vs-mysql.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mysql-vs
  namespace: istio-system
spec:
  hosts:
  - mysql-a.omegaworld.net
  gateways:
  - external-egress-mysql
  - mesh
  tcp:
  - match:
    - gateways:
      - mesh
      port: 3306
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
        subset: mysql-eg
      weight: 100

  - match:
    - gateways:
      - external-egress-mysql
      port: 443
    route:
    - destination:
        host: mysql-a.omegaworld.net
        port:
          number: 3306
        subset: mysql-tcp
      weight: 100
