manifests/golden2/external-vs-mysql2.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mysql2-vs
  namespace: istio-system
spec:
  hosts:
  - omega-mysql-1.omegaworld.net
  gateways:
  - external-egress-mysql2
  - mesh
  tcp:
  - match:
    - gateways:
      - mesh
      port: 3306
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
        subset: mysql2-eg
      weight: 100

  - match:
    - gateways:
      - external-egress-mysql2
      port: 443
    route:
    - destination:
        host: omega-mysql-1.omegaworld.net
        port:
          number: 3306
        subset: mysql-tcp
      weight: 100
