manifests/golden2/external-vs-omegaapp2.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: omegaapp2-vs
  namespace: istio-system
spec:
  hosts:
  - omegaapp-2.omegaworld.net
  gateways:
  - external-egress-omegaapp2
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:  
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
        subset: omegaapp2-eg
      weight: 100
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - omegaapp-2.omegaworld.net
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
        subset: omegaapp2-eg
      weight: 100
  tcp:
  - match:
    - gateways:
      - external-egress-omegaapp2
      port: 443
    route:
    - destination:
        host: omegaapp-2.omegaworld.net
        port:
          number: 443
