manifests/golden2/google-svc.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: google
  namespace: istio-system
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
