manifests/golden2/mysql-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mysql-a 
  namespace: istio-system
spec:
  host: mysql-a.omegaworld.net 
  subsets:
  - name: mysql-tcp
    trafficPolicy:
      outlierDetection:
        splitExternalLocalOriginErrors: true
        consecutiveLocalOriginFailures: 1
        consecutiveGatewayErrors: 1
        consecutive5xxErrors: 1
        interval: 5s
        baseEjectionTime: 5m
        maxEjectionPercent: 60
      loadBalancer:
        simple: LEAST_REQUEST
      connectionPool:
        tcp:
          maxConnections: 100
          connectTimeout: 10s
