manifests/golden2/mysql2-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: omega-mysql-1
  namespace: istio-egress
spec:
  host: omega-mysql-1.omegaworld.net 
  subsets:
  - name: mysql-tcp
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      connectionPool:
        tcp:
          maxConnections: 100
          connectTimeout: 30s
