manifests/golden2/omegaapp2-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: omegaapp2
  namespace: istio-system
spec:
  host: omegaapp-2.omegaworld.net
  subsets:
  - name: omegaapp2-tcp
