manifests/golden2/omegaweb-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: omegaweb-istio-g-dr
  namespace: istio-system
spec:
  host: omegaweb.myapp.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
