manifests/golden2/omegaweb-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: omegaweb-istio-g-vs
  namespace: istio-system
spec:
  hosts:
  - omegaweb-istio-g.omegaworld.net
  gateways:
  - omegaweb-istio-g-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: omegaweb.myapp.svc.cluster.local
