manifests/golden2/proxy-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: squid-proxy
  namespace: istio-system
spec:
  host: squid-a-01.omegaworld.net 
  subsets:
  - name: httpbin-proxy
    trafficPolicy:
      tunnel:
        protocol: CONNECT
        targetPort: 443
        targetHost: www.httpbin.org
  - name: cnn-proxy
    trafficPolicy:
      tunnel:
        protocol: CONNECT
        targetPort: 443
        targetHost: www.cnn.com
